Implement custom dragEnterEvent in the playlist

BUG: 235722